refactor: change text

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <div class="card-custom-content p-4">
                   <h4>Schematics ITS 2022</h4>
                   <p>Schematics is a major annual national event organized by the Department of Informatics Engineering, ITS. I'm working on a backend that built with laravel framework</p>
-                  <a href="https://schematics.its.ac.id/" target="blank" class="link-custom">Read More</a>
+                  <a href="https://schematics.its.ac.id/" target="blank" class="link-custom">Click Me</a>
                 </div>
               </div>
             </div>
@@ -118,7 +118,7 @@
                 <div class="card-custom-content p-4">
                   <h4>ILITS 2022</h4>
                   <p>ilits is an annual event at its which aims to provide information to inform new students who want to register for its about anything related to campus life at its</p>
-                  <a href="https://inilho.its.ac.id/" target="blank" class="link-custom">Read More</a>
+                  <a href="https://inilho.its.ac.id/" target="blank" class="link-custom">Click Me</a>
                 </div>
               </div>
             </div>
@@ -131,7 +131,7 @@
                   <div class="card-custom-content p-4">
                     <h4>ITS Mabacup 2022</h4>
                     <p>ITS Mabacup is an annual competition event held for new students. I have a jobdesk as a Backend Expert Staff by using laravel</p>
-                    <a href="http://mabacup-its.com/" target="blank" class="link-custom">Read More</a>
+                    <a href="http://mabacup-its.com/" target="blank" class="link-custom">Click Me</a>
                   </div>
                 </div>
               </div>
@@ -144,7 +144,7 @@
                 <div class="card-custom-content p-4">
                   <h4>Alpha Academy</h4>
                   <p>Alpha Academy is a preparatory start-up for the national high school science olympiad.</p>
-                  <a href="http://alpha-academy.id/" target="blank" class="link-custom">Read More</a>
+                  <a href="http://alpha-academy.id/" target="blank" class="link-custom">Click Me</a>
                 </div>
               </div>
             </div>
